<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Project1</string>
    <string name="login_page">Login Page</string>
    <string name="email_address">Email address or Phone no.</string>
    <string name="password">Password</string>
    <string name="user_login">User Login</string>
    <string name="merchant_login">Merchant Login</string>
    <string name="submit">submit</string>
    <string name="enter_your_details">Enter your Details</string>
    <string name="contact_no">Contact No.</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="register">Register</string>
    <string name="email_adress">email_address</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="email">email</string>
    <string name="add_to_card">Add to card</string>


        <string name="Project1">Ecommerce app</string>
        <string name="user_prompt">Select an option</string>

        <string-array name="user_arrays">
            <item>Customer Login</item>
            <item>Merchant Login</item>
        </string-array>

    <string name="Project2" tools:ignore="DuplicateDefinition">Ecommerce app</string>
    <string name="register_prompt">Select an option</string>

    <string-array name="register_arrays">
        <item>Register as a Customer</item>
        <item>Register as a Merchant</item>
    </string-array>



