<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tv_register_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_details"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/cardview_light_background"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:hint="@string/name"
        android:textColor="@color/grey"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="-26dp" />
    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:hint="@string/date_of_birth"
        android:inputType="number"
        android:textColor="@color/grey"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="-26dp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:hint="@string/address"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/Contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:hint="@string/contact_no"
        android:inputType="number"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:hint="@string/email_adress"
        android:textColor="@color/grey"
        android:autofillHints="" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:hint="@string/password"
        android:textColor="@color/grey" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey"
        android:text="@string/register"
        android:textColor="@color/black" />


</LinearLayout>