<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/cardview_light_background"/>

    <EditText
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:hint="@string/email"
        android:textColor="@color/grey"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="-26dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:hint="password"
        android:inputType="textPassword"
        android:textColor="@color/grey" />
    <RadioButton
        android:id="@+id/rbtn_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_login"
        tools:ignore="HardcodedText" />
    <RadioButton
        android:id="@+id/rbtn_merchant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/merchant_login"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey"
        android:text="@string/submit"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/rbtn_merchant"
        />



</LinearLayout>